[package]
name = "padding-oracle-attack"
version = "0.1.0"
authors = ["Filip Kubiš <filip.kubis@datasentics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
reqwest = { version = "0.11.3", features = ["blocking"] }
futures = "0.3"
hex = "0.3.0"